{{$NEXT}}

1.302115  2017-11-22 21:14:55-08:00 America/Los_Angeles (TRIAL RELEASE)

    - ipc_wait now reports exit and signal values

1.302114  2017-11-21 15:28:39-08:00 America/Los_Angeles (TRIAL RELEASE)

    - Added pre-subtest hook to Test2::API (#801 from dakkar)

1.302113  2017-11-20 14:04:16-08:00 America/Los_Angeles

    - Fix SIGPIPE in IPC test
    - Mark a test as usually AUTHOR_TESTING only

1.302112  2017-11-20 06:43:16-08:00 America/Los_Angeles

    - Fix test on threaded 5.8

1.302111  2017-11-18 09:54:33-08:00 America/Los_Angeles

    - Remove debugging from previous trial

1.302110  2017-11-17 09:47:23-08:00 America/Los_Angeles (TRIAL RELEASE)

    - Fix test breakage (from previous trial) on older perls

1.302109  2017-11-17 09:35:48-08:00 America/Los_Angeles (TRIAL RELEASE)

    - Fix some fragile tests
    - Add debugging to API/Instance.t for a cpan-testers failure

1.302108  2017-11-16 14:19:24-08:00 America/Los_Angeles (TRIAL RELEASE)

    - Apply p5p test patch from Craig A. Berry <craigberry@mac.com>

1.302107  2017-11-16 07:44:59-08:00 America/Los_Angeles (TRIAL RELEASE)

    - Allow regexp in Test::Tester

1.302106  2017-10-20 20:42:43-07:00 America/Los_Angeles

    - Make version number in HashBase sane.

1.302105  2017-10-20 07:09:45-07:00 America/Los_Angeles

    - No changes since last trial

1.302104  2017-10-19 11:39:01-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Combine multiple diags into one event

1.302103  2017-10-15 10:11:29-07:00 America/Los_Angeles

    - No changes since last TRIAL

1.302102  2017-10-14 20:05:45-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Fix some TODO edge cases that were not previously accounted for

1.302101  2017-10-12 07:43:16-07:00 America/Los_Angeles

    - Bump Test::Builder::IO::Scalar version for core

1.302100  2017-10-10 14:30:18-07:00 America/Los_Angeles

    - No changes since last TRIAL

1.302099  2017-10-10 09:29:40-07:00 America/Los_Angeles (TRIAL RELEASE)
