@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - add better interface for ipc_wait
+
 1.302115  2017-11-22 21:14:55-08:00 America/Los_Angeles (TRIAL RELEASE)
 
     - ipc_wait now reports exit and signal values
